# catch2-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  example_add.cpp  example_subtract.cpp
